Fix some of uncovered issues

--- a/zapisy/apps/common/assets/main/index.scss
+++ b/zapisy/apps/common/assets/main/index.scss
@@ -25,6 +25,10 @@ footer {
   }
 }
 
+.custom-select {
+  @extend .form-select
+}
+
 .nav-link:hover {
   text-decoration: none;
 }
